--- a/src/assets/picnic.css
+++ b/src/assets/picnic.css
@@ -560,6 +560,7 @@ nav .burger {
   }
 
   nav .burger~.menu {
+    color: #111;
       z-index: 11
   }
 
